small corrections, sliders optimization, video preload="none"

--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -473,6 +473,10 @@ pre {
     &.section--reviews .section__content {
       min-height: 680px;
     }
+
+    &.section--info {
+      min-height: 700px;
+    }
   }
 }
 
