--- a/src/blocks/search-form/search-form.pug
+++ b/src/blocks/search-form/search-form.pug
@@ -20,6 +20,6 @@ mixin search-form(text, mods)
 
   form.search-form(class=allMods)&attributes(attributes)
     .search-form__input-wrapper
-      input.search-form__input(type="text")
+      input.search-form__input(type="text" placeholder="Введите ваш поисковой запрос")
       block
 
