--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -6,12 +6,24 @@
 
   $block-name: &; // #{$block-name}__element
 
+  $items2-width: 700px;
+
   &.slider__item {
     flex-shrink: 0;
+
+    @media (min-width: $items2-width) {
+      display: flex !important;
+    }
   }
 
   &__list-wrapper {
     position: relative;
+  }
+
+  &__list {
+    @media (min-width: $items2-width) {
+      display: flex;
+    }
   }
 
 
@@ -19,6 +31,15 @@
     border-radius: 4px;
     border: 1px solid $tw-gray-200;
     overflow: hidden;
+
+    @media (min-width: $items2-width) {
+      display: flex;
+      flex-direction: column;
+    }
+
+    @media (min-width: $screen-xxl) {
+      flex-direction: row;
+    }
   }
 
   &__img {
@@ -46,8 +67,7 @@
       object-fit: cover;
       transition: transform $transition-time-img;
 
-      #{$block-name}__img:hover &{
-      }
+      #{$block-name}__img:hover & {}
     }
   }
 
@@ -57,6 +77,17 @@
 
   &__text {
     padding: 20px 30px 30px;
+
+    @media (min-width: $items2-width) {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      & .btn {
+        margin-top: auto;
+      }
+    }
 
     @media (min-width: $screen-xxl) {
       padding-left: 40px;
