--- a/src/blocks/product-info/product-info.scss
+++ b/src/blocks/product-info/product-info.scss
@@ -46,13 +46,27 @@
   }
 
   &__text-wrapper {
-    display: flex !important;
-    flex-direction: column;
+    // display: flex !important;
+    // flex-direction: column;
 
     @media (min-width: $screen-md) {
       grid-column-start: 2;
       margin-top: 10px;
       overflow: hidden;
+    }
+
+  }
+
+  &__text-slider {
+    display: flex !important;
+    flex-direction: column;
+
+    &:not(:first-child) {
+      display: none !important;
+    }
+
+    #{$block-name}__text-list.tns-slider & {
+      display: flex !important;
     }
   }
 
@@ -69,10 +83,22 @@
   &__view {
     height: 342px;
 
+    &:not(:first-child) {
+      display: none !important;
+    }
+
+    #{$block-name}__views-list.tns-slider & {
+      display: block !important;
+    }
+
     @media (min-width: $screen-md) {
       display: flex;
       background-color: $tw-gray-100;
       height: 100%;
+
+      #{$block-name}__views-list.tns-slider & {
+        display: flex !important;
+      }
     }
 
     @media (min-width: $screen-lg) {
