--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -18,7 +18,7 @@ block nav
   +burger('Показать мобильное меню', 'nav-mobile', 'main-nav--open')(class='main-nav__toggler burger--animated order-3 lg_hidden')
   +main-nav-mobile()(class="lg_hidden order-last")
   +search-form
-    +action-btn('solid','magnifying-glass','search')(id="btnSearch" class="search-form__btn mr-15px" type="button")
+    +action-btn('solid','magnifying-glass','search')(id="btnSearch" class="search-form__btn" type="button")
   +action-btn('solid','user','user')(class="mr-15px")
   +switcher({name: 'Ru'})(class="mr-25px hidden xxl_block text-lg" id="switcherLangTop")
     +switcher-item({name: 'Ru', code: 'ru', value: ''})
@@ -35,19 +35,19 @@ block content
     +cart-aside(class='hidden xl_block')
     section.section-main.section--main-slider.bg-gray-100(data-page='main-slider' id='main-slider')
       +slider-main({class: "3xl_container"})
-        +slider-item--main({url: '/video/dummy.mov', width: 1920, height: 1080, type: 'video/mp4'})
+        +slider-item--main({url: '/video/dummy.mov', width: 1920, height: 1080, type: 'video/mp4', poster: 'poster_001.jpg'})
           .slider__text.mt-30px.lg_mt-0
             h2.mt-0 Современная физиотерапия и&nbsp;реабилитация
             p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
             .slider__text-bottom.xxl_mt-30px
               +btn('Подробнее','regular')(href="#")
-        +slider-item--main({url: '/video/SampleVideo_360x240_5mb.mp4', width: 360, height: 240, type: 'video/mp4'})
+        +slider-item--main({url: '/video/SampleVideo_360x240_5mb.mp4', width: 360, height: 240, type: 'video/mp4', poster: 'poster_002.jpg'})
           .slider__text.mt-30px.lg_mt-0
             h2.mt-0 slide 2
             p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
             .slider__text-bottom.xxl_mt-30px
               +btn('Подробнее','regular')(href="#")
-        +slider-item--main({url: '/video/banana.mp4', width: 3840, height: 2160, type: 'video/mp4'})
+        +slider-item--main({url: '/video/banana.mp4', width: 3840, height: 2160, type: 'video/mp4', poster: 'poster_003.jpg'})
           .slider__text.mt-30px.lg_mt-0
             h2.mt-0 slide 3
             p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
@@ -243,7 +243,7 @@ block content
             .article-preview__list-wrapper
               .article-preview__list.slider
                 .article-preview.slider__item.flex.xxl_w-736px
-                  .article-preview__inner.xxl_flex.lg_h-466px
+                  .article-preview__inner.xxl_flex.xxl_h-466px
                     .article-preview__img.shrink-0(class="xxl_w-1/2 xxl_h-full")
                       img.lazyload(data-src="img/article-1.jpg")
                     .article-preview__text.xxl_pt-30px
@@ -252,7 +252,7 @@ block content
                       .article-preview__content.hidden.xxl_block.ellipsis(data-lines='9') Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
                       +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px")
                 .article-preview.slider__item.xxl_w-397px
-                  .article-preview__inner.xxl_flex.xxl_flex-col.lg_h-466px
+                  .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-466px
                     .article-preview__img.xxl_shrink.xxl_grow.xxl_h-full
                       img.lazyload(data-src="img/article-2.jpg")
                     .article-preview__text.xxl_pt-20px.xxl_shrink-0
@@ -261,7 +261,7 @@ block content
                       .article-preview__content.hidden
                       +btn('Подробнее','simple')(class="text-md mt-10px")
                 .article-preview.slider__item.flex.xxl_w-736px
-                  .article-preview__inner.xxl_flex.lg_h-466px
+                  .article-preview__inner.xxl_flex.xxl_h-466px
                     .article-preview__img.shrink-0(class="xxl_w-1/2 xxl_h-full")
                       img.lazyload(data-src="img/article-1.jpg")
                     .article-preview__text.xxl_pt-30px
@@ -270,7 +270,7 @@ block content
                       .article-preview__content.hidden.xxl_block.ellipsis(data-lines='9') Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
                       +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px")
                 .article-preview.slider__item.xxl_w-397px
-                  .article-preview__inner.xxl_flex.xxl_flex-col.lg_h-466px
+                  .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-466px
                     .article-preview__img.xxl_shrink.xxl_grow.xxl_h-full
                       img.lazyload(data-src="img/article-2.jpg")
                     .article-preview__text.xxl_pt-20px.xxl_shrink-0
