--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -14,7 +14,6 @@
   }
 }
 
-
 /* stylelint-disable */
 @font-face {
   font-family: 'Circe';
@@ -36,13 +35,54 @@
 
 /* stylelint-enable */
 
-
 .page {
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-text-size-adjust: 100%; // stylelint-disable-line
   min-width: 320px;
   min-height: 100%;
+
+
+    // &::before {
+    //     z-index: -1;
+    //     position: absolute;
+    //     left: 0;
+    //     top: -2600px; //catalog mobile
+    //     top: -1180px; //new mobile
+    //     top: -1504px; //new mobile whitout image
+    //     top: -1800px; //new 1440
+    //     top: -1324px; //product 1440
+    //     top: -1668px; //service mobile
+    //     top: -1140px; //reviews mobile
+    //     top: -1245px;//prodcut-info mobile
+    //     top: -1160px;// areas mobile
+    //     top: -1155px;// articles mobile
+    //     top: -872px; //fotter mobile
+    //     top: -170px; //features 1440
+    //     top: -1332px; //new 1440
+    //     top: -1462px;// areas 1440
+    //     top: -1725px; //catalog main
+    //     top: -1920px; //service 1440
+    //     top: -2115px; //reviews 1440
+    //     top: -2330px;// articles 1440
+    //   top: -2395px; //footer 1440
+    //     top: 0;
+    //     top: 1270px; //features page
+    //     top: 2950px; //catalog page
+    //     top: 2193px; //areas page
+    //     top: 3642px; //service page
+    //     top: 4333px; //reviews page
+    //     top: 1885px; //news page
+    //     top: 0;
+    //     // top: -140px; //main test features
+    //     // top: 32px; //mobile test features
+    //     // top: -10px; //mobile-menu
+    //     // top: -815px; //vacancies
+    //     // top: -275px;
+    //     //top: -5280px;
+    //     content: url('../screens/main-slider.jpg');
+    //     opacity: 1;
+    // }
 
   &__inner {
     min-height: 100vh;
@@ -53,46 +93,6 @@
   &__content {
     flex-grow: 1;
 
-    &::before {
-      //   z-index: -1;
-      //   position: absolute;
-      //   left: 0;
-      //   top: -2600px; //catalog mobile
-      //   top: -1180px; //new mobile
-      //   top: -1504px; //new mobile whitout image
-      //   top: -1800px; //new 1440
-      //   top: -1324px; //product 1440
-      //   top: -1668px; //service mobile
-      //   top: -1140px; //reviews mobile
-      //   top: -1245px;//prodcut-info mobile
-      //   top: -1160px;// areas mobile
-      //   top: -1155px;// articles mobile
-      //   top: -872px; //fotter mobile
-      //   top: -170px; //features 1440
-      //   top: -1332px; //new 1440
-      //   top: -1462px;// areas 1440
-      //   top: -1725px; //catalog main
-      //   top: -1920px; //service 1440
-      //   top: -2115px; //reviews 1440
-      //   top: -2330px;// articles 1440
-      // top: -2395px; //footer 1440
-      //   top: 0;
-      //   top: 1270px; //features page
-      //   top: 2950px; //catalog page
-      //   top: 2193px; //areas page
-      //   top: 3642px; //service page
-      //   top: 4333px; //reviews page
-      //   top: 1885px; //news page
-      //   top: 0;
-      //   // top: -140px; //main test features
-      //   // top: 32px; //mobile test features
-      //   // top: -10px; //mobile-menu
-      //   // top: -815px; //vacancies
-      //   // top: -275px;
-      //   //top: -5280px;
-      //   content: url('../screens/main-slider.jpg');
-      //   opacity: 1;
-    }
   }
 
   &__footer-wrapper {
@@ -107,8 +107,6 @@
       margin-top: 90px;
     }
   }
-
-
 }
 
 *,
@@ -122,20 +120,37 @@
 }
 
 body {
-  display: flex; // Исправляем баг в IE для min-height and flexbox (flex-direction:column)
-  flex-direction: column; // и прижимаем footer в IE 10-11
-  margin: 0;
-  min-height: 100%;
-  word-break: break-word;
-  font-size: $font-size;
-  line-height: 26px;
-  @apply font-sans;
-  text-align: left;
-  @apply text-gray-500;
-  background-color: $body-bg;
+  // display: flex; // Исправляем баг в IE для min-height and flexbox (flex-direction:column)
+  // flex-direction: column; // и прижимаем footer в IE 10-11
+  // margin: 0;
+  // min-height: 100%;
+  // word-break: break-word;
+  // font-size: $font-size;
+  // line-height: 26px;
+  // @apply font-sans;
+  // text-align: left;
+  // @apply text-gray-500;
+  // background-color: $body-bg;
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
+
+  .index & {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+}
+
+.wrapper {
+  height: 100% !important;
+  margin: 0 auto;
+  overflow: hidden;
+  padding-top: 90px;
 }
 
 .noscroll {
@@ -457,27 +472,32 @@ pre {
 
 }
 
-.section-main {
-  @media (min-width: $screen-lg) {
-    height: calc(100vh - 90px);
-    min-height: 600px;
+// .section-main {
+//   @media (min-width: $screen-lg) {
+//     height: calc(100vh - 90px);
+//     min-height: 600px;
 
-    &.section--catalog {
-      min-height: 700px;
-    }
+//     &.section--catalog {
+//       min-height: 700px;
+//     }
 
-    &.section--service {
-      min-height: 770px;
-    }
+//     &.section--service {
+//       min-height: 770px;
+//     }
 
-    &.section--reviews .section__content {
-      min-height: 680px;
-    }
+//     &.section--reviews .section__content {
+//       min-height: 680px;
+//     }
 
-    &.section--info {
-      min-height: 700px;
-    }
-  }
+//     &.section--info {
+//       min-height: 700px;
+//     }
+//   }
+// }
+
+
+body {
+
 }
 
 .section {
