--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -5,7 +5,7 @@
 
 // body  * {
 //   background-color: transparent !important;
-//   outline: 1px solid red;
+//   // outline: 1px solid red;
 // }
 
 // .section__inner {
