--- a/src/blocks/features/features.pug
+++ b/src/blocks/features/features.pug
@@ -19,7 +19,7 @@ mixin features(mods)
     }
 
   .features(class=allMods)&attributes(attributes)
-    .features__list.xxl_-ml-20px
+    .features__list
       block
 
 
