--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -79,6 +79,8 @@ $screen-xs:                     0;
 // $container-xl:                $screen-xl - 20;
 // $container-xxl:               $screen-xxl - 64;
 
+$onepage-width:           1024px;
+
 
 
 // Модульная сетка
