--- a/src/blocks/areas/areas.pug
+++ b/src/blocks/areas/areas.pug
@@ -13,7 +13,7 @@ mixin areas(mods)
     }
 
   .areas(class=allMods)&attributes(attributes)
-    .section__header
+    // .section__header
     h2.section__title.mb-20px.mt-0 Области применения
     .areas__inner
       block
