--- a/src/blocks/reviews/reviews.pug
+++ b/src/blocks/reviews/reviews.pug
@@ -38,9 +38,8 @@ mixin reviews(text, mods)
                 info: 'С. Федосеевка'
               })(class="slider__item")
               a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
-              .reviews__item-text.ellipsis(data-lines='10')
-                p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
-                p От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат. Я решила попробовать полечиться этим аппаратом.
+              .reviews__item-text.ellipsis(data-lines='8')
+                p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию. От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат. Я решила попробовать полечиться этим аппаратом.
                 p Результат был очень быстрым и неожиданно хорошим: через 5 дней я уже могла сидеть, стало меньше болей при ходьбе. Замечательный врач-невропатолог Семакин Валерий Федорович помимо уколов и капельниц делал блокады, мануальную терапию. И сочетал все это с лечением аппаратом МИЛТА. После первого курса лечения я уехала со значительным улучшением состояния. Через 3 месяца мне провели повторный курс, затем через полгода. И на протяжении следующих 5 лет ездила на лечение к этому доктору каждые полгода. Операцию делать не пришлось, несмотря даже на то, что в 2004 г. после падения обнаружилась еще одна грыжа.
             +reviews-user-item(
               {
@@ -49,7 +48,7 @@ mixin reviews(text, mods)
                 info: 'С. Федосеевка'
               })(class="slider__item")
               a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
-              .reviews__item-text.ellipsis(data-lines='10')
+              .reviews__item-text.ellipsis(data-lines='8')
                 p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
             +reviews-user-item(
               {
@@ -57,6 +56,8 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
               })(class="slider__item")
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
         .tab-pane.fade.-mx-20px#users(role="tabpanel" aria-labelledby="users-tab")
           .reviews__slider.slider.reviews__slider--users
             +reviews-item(
@@ -65,21 +66,24 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-                div Users slide 1
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-                div Users slide 2
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-                div Users slide 3
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
         .tab-pane.fade.-mx-20px#videos(role="tabpanel" aria-labelledby="videos-tab")
           .reviews__slider.reviews__slider--videos
             +reviews-item(
@@ -88,21 +92,24 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-                div Videos slide 1
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-                div Videos slide 2
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-                div Videos slide 3
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
+              .reviews__item-text.ellipsis(data-lines='8')
 
 
 
