--- a/src/blocks/reviews/reviews.scss
+++ b/src/blocks/reviews/reviews.scss
@@ -32,7 +32,12 @@
         grid-column-start: 2;
         grid-column-end: 3;
         justify-self: start;
+        margin-top: 20px;
       }
+    }
+
+    @media (min-width: $screen-lg) {
+      min-height: 386px;
     }
   }
 
@@ -63,6 +68,10 @@
       flex-direction: column;
       align-items: center;
       margin-right: 40px;
+    }
+
+    @media (min-width: $screen-xxl) {
+      margin-left: 20px;
     }
   }
 
@@ -129,6 +138,11 @@
   &__item-text {
     font-size: 16px;
     line-height: 26px;
+    color: $tw-gray-500;
+
+    p {
+      margin-bottom: 0;
+    }
   }
 
   &__item-text>* {
@@ -144,14 +158,14 @@
   }
 
 
-  .tns-controls {
-    top: -115px;
+  // .tns-controls {
+  //   top: -115px;
 
-    @media (min-width: $screen-xxl) {
-      top: -80px;
-      right: 20px;
-    }
-  }
+  //   @media (min-width: $screen-xxl) {
+  //     top: -80px;
+  //     right: 20px;
+  //   }
+  // }
 
 //!!!
   .tab-pane {
@@ -160,6 +174,10 @@
 
   .tab-content {
     margin-top: 20px;
+
+    @media (min-width: $screen-lg) {
+      margin-top: 40px;
+    }
   }
 
   .nav-tabs {
