--- a/src/blocks/slider-card/slider-card.scss
+++ b/src/blocks/slider-card/slider-card.scss
@@ -8,6 +8,10 @@
 
   padding: 20px;
 
+  // @media (min-width: $screen-xl) {
+  //   padding: 0;
+  // }
+
   &__inner {
     box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
