--- a/src/blocks/slider-main/slider-main.scss
+++ b/src/blocks/slider-main/slider-main.scss
@@ -17,7 +17,7 @@
     overflow: hidden;
 
     @media (min-width: $screen-lg) {
-      padding-bottom: 100px;
+      padding-bottom: 0;
     }
 
     & .tns-controls {
@@ -74,6 +74,8 @@
 
   &__media {
 
+    height: 232px;
+
     &--video-bg {
       position: absolute;
       top: 0;
@@ -90,19 +92,25 @@
       }
     }
 
+    @media (min-width: $screen-md) {
+      height: auto;
+    }
+
     @media (min-width: $screen-lg) {
-      width: 580px;
+      // width: 580px;
+      height: 100%;
+      width: 57%;
       flex-shrink: 0;
     }
 
     @media (min-width: $screen-xl) {
-      width: 720px;
-      flex-shrink: 0;
+      // width: 720px;
+      // flex-shrink: 0;
     }
 
     @media (min-width: $screen-xxl) {
-      width: 816px;
-      flex-shrink: 0;
+      // width: 816px;
+      // flex-shrink: 0;
     }
   }
 
@@ -132,7 +140,7 @@
 
     & #{$block-name}__media {
       position: relative;
-      height: 100%;
+      //!!! height: 100%;
       overflow: hidden;
     }
 
@@ -142,6 +150,10 @@
         transform: none;
         order: 10;
       }
+    }
+
+    p {
+      hyphens: none;
     }
 
     video {
@@ -184,11 +196,16 @@
 
   &__text-bottom {
 
-    @media (min-width: $screen-xl) {
-      margin-top: 25px;
+    .btn--regular {
+      @media (min-width: $screen-lg) {
+        padding: 9px 18px;
+      }
     }
   }
 }
+
+
+
 
 // .tns-controls {
 //   position: relative;
