--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -18,8 +18,8 @@ block nav
   +burger('Показать мобильное меню', 'nav-mobile', 'main-nav--open')(class='main-nav__toggler burger--animated order-3 lg_hidden')
   +main-nav-mobile()(class="lg_hidden order-last")
   +search-form
-    +action-btn('solid','magnifying-glass','search')(id="btnSearch" class="search-form__btn" type="button")
-  +action-btn('solid','user','user')(class="mr-15px")
+    +action-btn-svg('search', {w: '21', h: '20'}, 'search')(id="btnSearch" class="search-form__btn" type="button")
+  +action-btn-svg('user', {w: '18', h: '20'},'user')(class="mr-15px")
   +switcher({name: 'Ru'})(class="mr-25px hidden xxl_block text-lg" id="switcherLangTop")
     +switcher-item({name: 'Ru', code: 'ru', value: ''})
     +switcher-item({name: 'En', code: 'en', value: ''})
@@ -32,29 +32,29 @@ block nav
 block content
   .wrapper
     //- +pages
-    //- +cart-aside(class='hidden xl_block')
+    +cart-aside(class='hidden xl_block')
     .main
       section.section.section-main.section--main-slider.bg-gray-100(data-page='main-slider' id='main-slider')
         +slider-main({class: "3xl_container"})
           +slider-item--main({url: '/video/dummy.mov', width: 1920, height: 1080, type: 'video/mp4', poster: 'poster_001.jpg'})
-            .slider__text.mt-30px.lg_mt-0
-              h2.mt-0 Современная физиотерапия и&nbsp;реабилитация
+            .slider-main__text.mt-30px.lg_mt-0
+              h2.mt-0.md_text-40px.lg_text-48px Современная физиотерапия и&nbsp;реабилитация
               p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
-              .slider__text-bottom.xxl_mt-30px
+              .slider-main__text-bottom.xxl_mt-25px
                 +btn('Подробнее','regular')(href="#")
           +slider-item--main({url: '/video/SampleVideo_360x240_5mb.mp4', width: 360, height: 240, type: 'video/mp4', poster: 'poster_002.jpg'})
-            .slider__text.mt-30px.lg_mt-0
-              h2.mt-0 slide 2
+            .slider-main__text.mt-30px.lg_mt-0
+              h2.mt-0.md_text-40px.lg_text-48px slide 2
               p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
-              .slider__text-bottom.xxl_mt-30px
+              .slider-main__text-bottom.xxl_mt-25px
                 +btn('Подробнее','regular')(href="#")
           +slider-item--main({url: '/video/banana.mp4', width: 3840, height: 2160, type: 'video/mp4', poster: 'poster_003.jpg'})
-            .slider__text.mt-30px.lg_mt-0
-              h2.mt-0 slide 3
+            .slider-main__text.mt-30px.lg_mt-0
+              h2.mt-0.md_text-40px.lg_text-48px slide 3
               p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
-              .slider__text-bottom.xxl_mt-30px
+              .slider-main__text-bottom.xxl_mt-25px
                 +btn('Подробнее','regular')(href="#")
-      section.section.section-main.section--features(data-page='features' id='features')
+      section.section.section-main.section--features.mt-35px.lg_mt-0(data-page='features' id='features')
           .section__inner
             .section__content.section__container.xl_container
               +features
@@ -74,16 +74,16 @@ block content
                 })
                 +features-item({
                   title: 'Безопасность',
-                  text: "<ul class='m-0 p-0 list-none'><li>Медико-консультативная поддержка</li>" +
-                    "<li>Оперативный прием заявок на гарантийный ремонт</li>" +
-                    "<li>Бесплатный «пробный сеанс» у врача в офисе при производстве</li></ul>",
+                  text: "<ul class='m-0 p-0 list-none'><li>Соответствуют всем требованиям и стандартам</li>" +
+                    "<li>Относятся к классу полной безопасности применения согласно IEC 60825-1</li>" +
+                    "<li>Без возрастных ограничений</li></ul>",
                   icon: 'lock'
                 })
                 +features-item({
                   title: 'Качество',
-                  text: "<ul class='m-0 p-0 list-none'><li>Медико-консультативная поддержка</li>" +
-                    "<li>Оперативный прием заявок на гарантийный ремонт</li>" +
-                    "<li>Бесплатный «пробный сеанс» у врача в офисе при производстве</li></ul>",
+                  text: "<ul class='m-0 p-0 list-none'><li>Производство соответствует требованиями мировых стандартов&nbsp;(сертификат ISO)</li>" +
+                    "<li>Наша аппаратура поставляется в 38 стран мира</li>" +
+                    "<li>Двойной контроль качества обеспечивает высокую надежность и&nbsp;долговечность</li></ul>",
                   icon: 'star'
                 })
       section.section.section-main.section--info(data-page='info' id='info')
@@ -103,21 +103,21 @@ block content
                 .product-info__text-list.slider
                   +product-info-text(
                     {
-                      title: '1. РИКТА-ЭСМИЛ (2А)-03',
+                      title: 'РИКТА-ЭСМИЛ (2А)-03',
                       desc: 'Аппарат электро-свето-магнито-инфракрасной лазерной терапии',
                       price: '37 800 ₽'
                     })
                     div
                       h4.text-xl.leading-7.text-black.mb-15px Преимущества
                       ul.pl-0.text-sm.leading-6
-                        li.flex.items-center.mb-10px.xxl_mb-15px
-                          i.icon_laser.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_laser.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-                        li.flex.items-center.mb-10px.xxl_mb-15px
-                          i.icon_blue-light.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_blue-light.shrink-0.mr-18px
                           span Синий свет (длина волны 400-500 нм) – подавление воспалительных процессов, эффекты разжижения крови и ускоренного купирования проявлений инфекции.  Обладает метаболическим и психоэмоциональным действием.
-                        li.flex.items-center.mb-10px.xxl_mb-15px
-                          i.icon_cert.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_cert.shrink-0.mr-18px
                           span Сертификат Росздравнадзора – гарантия качества и безопасности применения медицинского аппарата.
                   +product-info-text(
                     {
@@ -128,14 +128,14 @@ block content
                     div
                       h4.text-xl.leading-7.text-black.mb-15px Преимущества
                       ul.pl-0.text-sm.leading-6
-                        li.flex.items-center.mb-10px
-                          i.icon_laser.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_laser.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-                        li.flex.items-center.mb-10px
-                          i.icon_blue-light.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_blue-light.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-                        li.flex.items-center.mb-10px
-                          i.icon_cert.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_cert.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
                   +product-info-text(
                     {
@@ -146,16 +146,16 @@ block content
                     div
                       h4.text-xl.leading-7.text-black.mb-15px Преимущества
                       ul.pl-0.text-sm.leading-6
-                        li.flex.items-center.mb-10px
-                          i.icon_laser.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_laser.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-                        li.flex.items-center.mb-10px
-                          i.icon_blue-light.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_blue-light.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-                        li.flex.items-center.mb-10px
-                          i.icon_cert.shrink-0.mr-15px
+                        li.flex.items-center.mb-10px.lg_mb-16px
+                          i.icon_cert.shrink-0.mr-18px
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-      section.section.section-main.section--area.pt-60px.xl_pt-0(data-page='area' id='area')
+      section.section.section-main.section--area.pt-60px.lg_pt-0(data-page='area' id='area')
         .section__inner
           .section__content.section__container.container
             +areas
@@ -170,7 +170,7 @@ block content
         .section__inner
           .section__content.section__container.container
             .product-catalog
-              h2.section__title.mb-0.mt-0.xxl_mb-5px Каталог аппаратов
+              h2.section__title.mb-0.mt-0.xxl_mb-10px Каталог аппаратов
               +btn('Все аппараты','simple')(class="pt-3px")
               .product-list.mt-20px
                 +product-card(
@@ -211,16 +211,16 @@ block content
                       '/img/service-3x.jpg 1992w'
               })
               ul.service__list.pl-0.text-black
-                li.service__item.flex.items-center.mb-20px.xxl_pb-18px.xxl_mb-20px
+                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
                   i.icon_service-tech.shrink-0.mr-20px
                   span Тех.обслуживание производителем
-                li.service__item.flex.items-center.mb-20px.xxl_pb-18px.xxl_mb-20px
+                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
                   i.icon_service-garant.shrink-0.mr-20px
                   span Гарантия два года
-                li.service__item.flex.items-center.mb-20px.xxl_pb-18px.xxl_mb-20px
+                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
                   i.icon_service-delivery.shrink-0.mr-20px
                   span Бесплатная доставка
-                li.service__item.flex.items-center.mb-20px.xxl_pb-18px.xxl_mb-20px
+                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
                   i.icon_service-change.shrink-0.mr-20px
                   span Обмен старых аппаратов со скидкой
       section.section.section-main.section--reviews.pt-60px.lg_pt-0(data-page='reviews' id='reviews')
@@ -240,41 +240,43 @@ block content
         .section__inner
           .section__content.section__container.container
               h2.section__title.mb-0.lg_mb-0.lg_mt-0.xxl_mb-10px Новости и статьи
-              +btn('Все статьи','simple').mb-20px
+              +btn('Все статьи','simple').mb-20px.shrink-0
               .article-preview__list-wrapper
                 .article-preview__list.slider
                   .article-preview.slider__item.flex.xxl_w-736px
-                    .article-preview__inner.xxl_flex.xxl_h-466px
-                      .article-preview__img.shrink-0(class="xxl_w-1/2 xxl_h-full")
+                    .article-preview__inner.xxl_flex.xxl_h-full
+                      .article-preview__img.xxl_shrink-0(class="xxl_w-1/2 xxl_h-full")
                         img.lazyload(data-src="img/article-1.jpg")
-                      .article-preview__text.xxl_pt-30px
-                        .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-20px 15 марта 2022
+                      .article-preview__text.xxl_pt-40px
+                        .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-10px 15 марта 2022
                         .article-preview__title.mb-10px.text-lg.text-black Лазерная терапия в комплексном лечении рожистого воспаления
-                        .article-preview__content.hidden.xxl_block.ellipsis(data-lines='9') Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
-                        +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px")
+                        .article-preview__content.hidden.xxl_block.xxl_flex-grow.xxl_overflow-hidden.xxl_w-full.xxl_mb-30px
+                          .article-preview__content-inner.text-base.text-gray-500.max-h-full.article-preview__ellipsis.xl_pr-10px Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
+                        +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px xxl_shrink-0")
                   .article-preview.slider__item.xxl_w-397px
-                    .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-466px
-                      .article-preview__img.xxl_shrink.xxl_grow.xxl_h-full
+                    .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
+                      .article-preview__img.xxl_shrink(class="h-[57%]")
                         img.lazyload(data-src="img/article-2.jpg")
-                      .article-preview__text.xxl_pt-20px.xxl_shrink-0
+                      .article-preview__text.xxl_pt-30px.xxl_shrink-0
                         .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
                         .article-preview__title.text-lg.text-black Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                         .article-preview__content.hidden
                         +btn('Подробнее','simple')(class="text-md mt-10px")
                   .article-preview.slider__item.flex.xxl_w-736px
-                    .article-preview__inner.xxl_flex.xxl_h-466px
-                      .article-preview__img.shrink-0(class="xxl_w-1/2 xxl_h-full")
+                    .article-preview__inner.xxl_flex.xxl_h-full
+                      .article-preview__img.xxl_shrink-0(class="xxl_w-1/2 xxl_h-full")
                         img.lazyload(data-src="img/article-1.jpg")
-                      .article-preview__text.xxl_pt-30px
-                        .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-20px 15 марта 2022
+                      .article-preview__text.xxl_pt-40px
+                        .article-preview__date.text-base.text-gray-300.mb-10px.xxl_mb-10px 15 марта 2022
                         .article-preview__title.mb-10px.text-lg.text-black Лазерная терапия в комплексном лечении рожистого воспаления
-                        .article-preview__content.hidden.xxl_block.ellipsis(data-lines='9') Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
+                        .article-preview__content.hidden.xxl_block.xxl_flex-grow.xxl_overflow-hidden.xxl_w-full.xxl_mb-30px
+                          .article-preview__content-inner.text-base.text-gray-500.max-h-full.article-preview__ellipsis.xl_pr-10px Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
                         +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px")
                   .article-preview.slider__item.xxl_w-397px
-                    .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-466px
-                      .article-preview__img.xxl_shrink.xxl_grow.xxl_h-full
+                    .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
+                      .article-preview__img.xxl_shrink(class="h-[57%]")
                         img.lazyload(data-src="img/article-2.jpg")
-                      .article-preview__text.xxl_pt-20px.xxl_shrink-0
+                      .article-preview__text.xxl_pt-30px.xxl_shrink-0
                         .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
                         .article-preview__title.text-lg.text-black Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                         .article-preview__content.hidden
@@ -287,7 +289,7 @@ block content
                 //-     .article-preview__title.text-lg.text-black Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                 //-     .article-preview__content
                 //-     +btn('Подробнее','simple')(class="text-md mt-10px")
-      .section.page__footer-wrapper.mt-60px.xxl_mt-100px
+      .section.page__footer-wrapper.mt-60px.lg_mt-0
         +page-footer()
           .page-footer__contacts.xxl_ml-60px.xxl_justify-self-end.xxl_mt-20px
             .page-footer__phone.text-xl #[a(href='tel:+70000000000') +7 000 000 00 00]
