--- a/src/pug/layout-first-page.pug
+++ b/src/pug/layout-first-page.pug
@@ -44,13 +44,12 @@ html(class='index page no-js', lang='ru')
 
     +page-header()(class="text-black")
       +logo('/')
-        img(src='img/logo.png', alt='Logo', width='120', height='16')
+        //- img(src='img/logo.png', alt='Logo', width='120', height='16')
+        +svg('logo','',{width: '120',height: '16'})
       block nav
 
     block content
       p содержимое
-
-
 
     block page-bottom
       script(src='js/bundle.js')
