--- a/src/blocks/slider-main/slider-main.pug
+++ b/src/blocks/slider-main/slider-main.pug
@@ -64,6 +64,6 @@ mixin slider-item--main(props)
           video(width=props.width height=props.height preload="none" poster="video/" + props.poster)
             source(src=props.url type=props.type)
           .slider-main__btn-play
-      .container.lg_flex.lg_flex-col.lg_justify-center.lg_px-64px.xl_block.xl_pl-130px.xl_pr-60px.xxl_pl-180px.xxl_pr-80px.xxl_-mt-110px
+      .container.lg_flex.lg_flex-col.lg_justify-center.lg_px-64px.xl_block.xl_pl-130px.xl_pr-60px.xxl_pl-180px.xxl_pr-80px
         block
 
