--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -133,10 +133,10 @@ block content
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
                         li.flex.items-center.mb-10px.lg_mb-16px
                           i.icon_blue-light.shrink-0.mr-18px
-                          span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
+                          span Синий свет (длина волны 400-500 нм) – подавление воспалительных процессов, эффекты разжижения крови и ускоренного купирования проявлений инфекции.  Обладает метаболическим и психоэмоциональным действием.
                         li.flex.items-center.mb-10px.lg_mb-16px
                           i.icon_cert.shrink-0.mr-18px
-                          span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
+                          span Сертификат Росздравнадзора – гарантия качества и безопасности применения медицинского аппарата.
                   +product-info-text(
                     {
                       title: '3. РИКТА-ЭСМИЛ (2А)-03',
@@ -151,11 +151,11 @@ block content
                           span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
                         li.flex.items-center.mb-10px.lg_mb-16px
                           i.icon_blue-light.shrink-0.mr-18px
-                          span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
+                          span Синий свет (длина волны 400-500 нм) – подавление воспалительных процессов, эффекты разжижения крови и ускоренного купирования проявлений инфекции.  Обладает метаболическим и психоэмоциональным действием.
                         li.flex.items-center.mb-10px.lg_mb-16px
                           i.icon_cert.shrink-0.mr-18px
-                          span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-      section.section.section-main.section--area.pt-60px.lg_pt-0(data-page='area' id='area')
+                          span Сертификат Росздравнадзора – гарантия качества и безопасности применения медицинского аппарата.
+      section.section.section-main.section--area.pt-35px.lg_pt-0(data-page='area' id='area')
         .section__inner
           .section__content.section__container.container
             +areas
